--- a/WebSudoku/Pages/Sudoku.razor.css
+++ b/WebSudoku/Pages/Sudoku.razor.css
@@ -1,24 +1,4 @@
-﻿.sudoku-table > tbody > tr > td, .sudoku-table > tr > td {
-    border: 2px solid black;
-}
-
-.sudoku-table > tbody > tr:nth-child(3n) > td, .sudoku-table > tr:nth-child(3n) > td {
-    border-bottom: 4px solid black !important;
-} 
-
-.sudoku-table > tbody > tr:last-child > td, .sudoku-table > tr:last-child > td {
-    border-bottom: 2px solid black !important;
-}
-
-.sudoku-table > tbody > tr > td:nth-child(3n), .sudoku-table > tr > td:nth-child(3n) {
-    border-right: 4px solid black !important;
-}
-
-.sudoku-table > tbody > tr > td:last-child, .sudoku-table > tr > td:last-child {
-    border-right: 2px solid black !important;
-}
-
-@media all {
+﻿@media all {
     .div-main {
         flex: 0 0 auto;
     }
@@ -43,11 +23,6 @@
         flex-direction: row;
     }
 
-    .sudoku-table {
-        border: thin solid black;
-        width: 100%;
-    }
-
     .display-var {
         display: none;
     }
@@ -62,11 +37,6 @@
         width: 50%;
     }
 
-    .sudoku-table {
-        border: thin solid black;
-        font-size: medium;
-    }
-
     .display-var {
         display: none;
     }
@@ -79,11 +49,6 @@
 
     .div-options {
         width: 50%;
-    }
-
-    .sudoku-table {
-        border: thin solid black;
-        font-size: medium;
     }
 
     .display-var {
@@ -105,11 +70,6 @@
 
     .flex-direction-var {
         flex-direction: column;
-    }
-
-    .sudoku-table {
-        border: thin solid black;
-        width: 100%;
     }
 
     .display-var {
@@ -141,48 +101,25 @@
     .flex-direction-var {
         flex-direction: row;
     }
-
-    .sudoku-table {
-        border: thin solid black;
-        width: 100%;
-    }
-
+    
     .display-var {
         display: none;
     }
 }
 
 @media (min-width: 1024px) and (max-width: 1212px) {
-    .sudoku-table {
-        border: thin solid black;
-        width: 100%;
-        font-size: x-large;
-    }
-
     .display-var {
         display: none;
     }
 }
 
 @media (min-width: 1212px) {
-    .sudoku-table {
-        border: thin solid black;
-        width: 100%;
-        font-size: x-large;
-    }
-
     .display-var {
         display: none;
     }
 }
 
 @media (min-width: 1500px) {
-    .sudoku-table {
-        border: thin solid black;
-        width: 100%;
-        font-size: x-large;
-    }
-
     .display-var {
         display: none;
     }
