--- a/WebSudoku.styles.css
+++ b/WebSudoku.styles.css
@@ -229,54 +229,13 @@ main[b-834vkyk4rs] {
     }
 }
 /* /Pages/Sudoku.razor.rz.scp.css */
-.sudoku-table > tbody > tr > td[b-245jprxzxn], .sudoku-table > tr > td[b-245jprxzxn] {
-    border: 2px solid black;
-}
-
-.sudoku-table > tbody > tr:nth-child(3n) > td[b-245jprxzxn], .sudoku-table > tr:nth-child(3n) > td[b-245jprxzxn] {
-    border-bottom: 4px solid black !important;
-} 
-
-.sudoku-table > tbody > tr:last-child > td[b-245jprxzxn], .sudoku-table > tr:last-child > td[b-245jprxzxn] {
-    border-bottom: 2px solid black !important;
-}
-
-.sudoku-table > tbody > tr > td:nth-child(3n)[b-245jprxzxn], .sudoku-table > tr > td:nth-child(3n)[b-245jprxzxn] {
-    border-right: 4px solid black !important;
-}
-
-.sudoku-table > tbody > tr > td:last-child[b-245jprxzxn], .sudoku-table > tr > td:last-child[b-245jprxzxn] {
-    border-right: 2px solid black !important;
-}
-
 @media all {
     .div-main[b-245jprxzxn] {
         flex: 0 0 auto;
     }
 
-    .div-options[b-245jprxzxn] {
-        flex: 0 0 auto;
-        width: 50%;
-        word-break: break-word;
-        word-wrap: break-word;
-        display: grid;
-        justify-items: stretch;
-        margin: auto;
-        margin-top: 12pt;
-        padding: 2pt;
-    }
-
-    .div-options > button[b-245jprxzxn] {
-        margin: 2pt;
-    }
-
     .flex-direction-var[b-245jprxzxn] {
         flex-direction: row;
-    }
-
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        width: 100%;
     }
 
     .display-var[b-245jprxzxn] {
@@ -289,15 +248,6 @@ main[b-834vkyk4rs] {
         width: 50%;
     }
 
-    .div-options[b-245jprxzxn] {
-        width: 50%;
-    }
-
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        font-size: medium;
-    }
-
     .display-var[b-245jprxzxn] {
         display: none;
     }
@@ -308,20 +258,10 @@ main[b-834vkyk4rs] {
         width: 50%;
     }
 
-    .div-options[b-245jprxzxn] {
-        width: 50%;
-    }
-
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        font-size: medium;
-    }
-
     .display-var[b-245jprxzxn] {
         display: none;
     }
 }
-
 
 @media only screen and (orientation: portrait) {
    .div-main[b-245jprxzxn] {
@@ -329,18 +269,8 @@ main[b-834vkyk4rs] {
         width: 100%;
     }
 
-    .div-options[b-245jprxzxn] {
-        flex: 0 0 auto;
-        width: 100%;
-    }
-
     .flex-direction-var[b-245jprxzxn] {
         flex-direction: column;
-    }
-
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        width: 100%;
     }
 
     .display-var[b-245jprxzxn] {
@@ -364,56 +294,28 @@ main[b-834vkyk4rs] {
         width: 50%;
     }
 
-    .div-options[b-245jprxzxn] {
-        flex: 0 0 auto;
-        width: 50%;
-    }
-
     .flex-direction-var[b-245jprxzxn] {
         flex-direction: row;
     }
-
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        width: 100%;
-    }
-
+    
     .display-var[b-245jprxzxn] {
         display: none;
     }
 }
 
 @media (min-width: 1024px) and (max-width: 1212px) {
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        width: 100%;
-        font-size: x-large;
-    }
-
     .display-var[b-245jprxzxn] {
         display: none;
     }
 }
 
 @media (min-width: 1212px) {
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        width: 100%;
-        font-size: x-large;
-    }
-
     .display-var[b-245jprxzxn] {
         display: none;
     }
 }
 
 @media (min-width: 1500px) {
-    .sudoku-table[b-245jprxzxn] {
-        border: thin solid black;
-        width: 100%;
-        font-size: x-large;
-    }
-
     .display-var[b-245jprxzxn] {
         display: none;
     }
@@ -427,4 +329,131 @@ option[b-wzhoucr2k6] {
 option.current[b-wzhoucr2k6] {
     color: gray;
     background-color: unset;
+}
+/* /Shared/SudokuBoard.razor.rz.scp.css */
+.sudoku-table > tbody > tr > td[b-l0637boppy], .sudoku-table > tr > td[b-l0637boppy] {
+    border: 2px solid black;
+}
+
+.sudoku-table > tbody > tr:nth-child(3n) > td[b-l0637boppy], .sudoku-table > tr:nth-child(3n) > td[b-l0637boppy] {
+    border-bottom: 4px solid black !important;
+}
+
+.sudoku-table > tbody > tr:last-child > td[b-l0637boppy], .sudoku-table > tr:last-child > td[b-l0637boppy] {
+    border-bottom: 2px solid black !important;
+}
+
+.sudoku-table > tbody > tr > td:nth-child(3n)[b-l0637boppy], .sudoku-table > tr > td:nth-child(3n)[b-l0637boppy] {
+    border-right: 4px solid black !important;
+}
+
+.sudoku-table > tbody > tr > td:last-child[b-l0637boppy], .sudoku-table > tr > td:last-child[b-l0637boppy] {
+    border-right: 2px solid black !important;
+}
+
+@media all {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        width: 100%;
+    }
+}
+
+@media only screen and (orientation: landscape) {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        font-size: medium;
+    }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 1024px) {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        font-size: medium;
+    }
+}
+
+@media only screen and (orientation: portrait) {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        width: 100%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        width: 100%;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1212px) {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        width: 100%;
+        font-size: x-large;
+    }
+}
+
+@media (min-width: 1212px) {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        width: 100%;
+        font-size: x-large;
+    }
+}
+
+@media (min-width: 1500px) {
+    .sudoku-table[b-l0637boppy] {
+        border: thin solid black;
+        width: 100%;
+        font-size: x-large;
+    }
+}
+/* /Shared/SudokuOptions.razor.rz.scp.css */
+@media all {
+    .div-options[b-s44kk63sf1] {
+        flex: 0 0 auto;
+        width: 50%;
+        word-break: break-word;
+        word-wrap: break-word;
+        display: grid;
+        justify-items: stretch;
+        margin: auto;
+        margin-top: 12pt;
+        padding: 2pt;
+    }
+
+    .div-options > button[b-s44kk63sf1] {
+        margin: 2pt;
+    }
+}
+
+@media only screen and (orientation: landscape) {
+    .div-options[b-s44kk63sf1] {
+        width: 50%;
+    }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 1024px) {
+    .div-options[b-s44kk63sf1] {
+        width: 50%;
+    }
+}
+
+@media only screen and (orientation: portrait) {
+    .div-options[b-s44kk63sf1] {
+        flex: 0 0 auto;
+        width: 100%;
+    }
+
+    .sticky-bottom-portrait[b-s44kk63sf1] {
+        bottom: 0;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .div-options[b-s44kk63sf1] {
+        flex: 0 0 auto;
+        width: 50%;
+    }
 }
