Fix first load not being processed as expected

--- a/WebSudoku/Pages/Sudoku.razor
+++ b/WebSudoku/Pages/Sudoku.razor
@@ -131,6 +131,7 @@
             generated = true;
             sudokuBoard.GenerateNew(targetBlanks, attemptsToRemove);
         }
+        StateHasChanged();
     }
 
     private void OnWinCondition()
