--- a/WebSudoku/Pages/Settings.razor
+++ b/WebSudoku/Pages/Settings.razor
@@ -2,12 +2,10 @@
 
 @using System.ComponentModel.DataAnnotations
 @using apb97.github.io.WebSudoku.Shared
-@inherits LocalizableComponent<Settings>
 
 <SettingsProvider @ref="settingsProvider" />
 
-@if (ShouldRender())
-{
+<LocalizedComponent T="Settings" Context="Loc">
     <PageTitle>Web Sudoku - @Loc["Settings"]</PageTitle>
 
     <div>
@@ -44,7 +42,7 @@
             </tbody>
         </table>
     </div>
-}
+</LocalizedComponent>
 
 @code {
     private SettingsProvider? settingsProvider;
